--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,15 @@
     background: var(--bg-color);
  }
 
+ html ::-webkit-scrollbar {
+   width: 0.5rem;
+   background: transparent;
+ }
+
+ html ::-webkit-scrollbar-thumb {
+   background: var(--heading-color);
+ }
+
  img {
     width: 100%;
  }
@@ -512,6 +521,7 @@
    outline: none;
    font-size: 0.9rem;
    padding: 10px;
+   margin-bottom: 5px;
    color: var(--text-color);
    background: var(--box-color);
    border-radius: 0.4rem;
@@ -590,3 +600,190 @@
    transition: 0.3s;
  }
   /* scroll to the top */
+
+/* Responsiveness */
+@media (max-width:990px) {
+   .container {
+      margin: 0 auto;
+      width: 90%;
+   }
+}
+
+@media (max-width:892px) {
+   section {
+      padding: 2rem 0;
+   }
+
+   .nav {
+      padding: 12px 0;
+   }
+
+   .heading {
+      font-size: 4rem;
+   }
+
+   .portfolio-box {
+      height: 257px;
+    }
+}
+
+@media (max-width:775px) {
+   /* .nav {
+      padding: 10px 0;
+   } */
+
+   .logo {
+      font-size: 1.1rem;
+   }
+
+   .home {
+      min-height: 500px;
+      padding-top: 6rem;
+   }
+
+   .hero-text h3 {
+     font-size: 1rem;
+   }
+   
+   .hero-text h2 {
+      font-size: 3rem;
+   } 
+
+   .hero-text p {
+      font-size: 0.825rem;
+   }
+
+   .services-content {
+      grid-template-columns: repeat(2, 1fr);
+   }
+
+   .portfolio-box {
+      height: 245px;
+   }
+
+   .menu-icon {
+      display: flex;
+   }
+
+   .navbar {
+      position: absolute;
+      top: 0;
+      right: -100%;
+      width: 300px;
+      height: 100vh;
+      background: var(--box-color);
+      flex-direction: column;
+      align-items: center;
+      padding: 50px 20px;
+      transition: 0.5s all cubic-bezier(0.075, 0.82, 0.165, 1);
+   }
+
+   .open-menu {
+      right: 0;
+      transition: 0.5s all cubic-bezier(0.075, 0.82, 0.165, 1);
+   }
+
+   .nav-link {
+      display: block;
+      margin: 1rem 0;
+   }
+}
+
+@media (max-width:635px) {
+   .about-content {
+      grid-template-columns: 1fr;
+   }
+
+   .about-data span {
+      font-size: 0.9rem;
+   }
+
+   .about-data h2 {
+      font-size: 1.7rem;
+      line-height: 2.3rem;
+      font-weight: 600;
+      margin: 0.8rem 0;
+   }
+
+   .about-text p {
+      font-size: 0.825rem;
+      letter-spacing: 1px;
+      text-align: center;
+      margin-bottom: 1.3rem;
+   }
+
+   .portfolio-content {
+      grid-template-columns: repeat(2, 250px);
+      margin-bottom: 3px;
+   }
+
+   .projects-content {
+      grid-template-columns: repeat(2, 200px);
+   }
+}
+
+@media (max-width:450px) {
+   .home {
+      min-height: 485px;
+      padding-top: 5rem;
+   }
+
+   .home-img {
+      width: 250px;
+   }
+
+   .home-img img {
+      width: 250px;
+   }
+
+   .hero-text {
+      display: flex;
+      text-align: center;
+      justify-content: center;
+      margin-left: 15px;
+   }
+
+   .hero-text p {
+      font-size: 0.825rem;
+      text-align: center;
+      justify-content: center;
+      align-items: center;
+   }
+
+   .hero-text h2 {
+      font-size: 2rem;
+      line-height: 3.2rem;
+   }
+
+   .heading {
+      font-size: 3rem;
+   }
+
+   .about-data h2 {
+      font-size: 1.5rem;
+      line-height: 2.1rem;
+      margin: 0.6rem 0;
+   }
+
+   .services-content,
+   .portfolio-content,
+   .projects-content {
+      grid-template-columns: 1fr;
+   }
+
+   .review-box .review-text {
+      font-size: 0.82rem;
+   }
+
+   .footer-links {
+      flex-direction: column;
+      row-gap: 1rem;
+   }
+}
+
+@media (max-width:325px) {
+   .navbar {
+      width: 100%;
+   }
+}
+/* Responsiveness */
